--- a/03-Methods and Functions/05-Lambda-Expressions-Map-and-Filter.ipynb
+++ b/03-Methods and Functions/05-Lambda-Expressions-Map-and-Filter.ipynb
@@ -234,7 +234,8 @@
     "\n",
     "**lambda's body is a single expression, not a block of statements.**\n",
     "\n",
-    "* The lambda's body is similar to what we would put in a def body's return statement. We simply type the result as an expression instead of explicitly returning it. Because it is limited to an expression, a lambda is less general that a def. We can only squeeze design, to limit program nesting. lambda is designed for coding simple functions, and def handles the larger tasks."
+    "* The lambda's body is similar to what we would put in a def body's return statement. We simply type the result as an expression instead of explicitly returning it. Because it is limited to an expression, a lambda is less general than
+    a def. We can only squeeze design, to limit program nesting. lambda is designed for coding simple functions, and def handles the larger tasks."
    ]
   },
   {
